--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,10 @@ python:
   - 3.5
   - 3.6
 install:
-  - pip install -r requirements.txt
+  - pip3 install -r requirements.txt
+  - pip3 install coverage
+  - pip3 install coveralls
 script:
-  - coverage run --source=ate -m unittest discover
+  - coverage3 run --source=ate -m unittest discover
 after_success:
-  - coveralls
+  - coveralls3
