--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 sudo: false
-language: python
+language: python3
 python:
   - 2.7
   - 3.3
@@ -8,8 +8,8 @@ python:
   - 3.6
   - 3.7-dev
 install:
-  - pip install -r requirements_dev.txt
+  - pip3 install -r requirements_dev.txt
 script:
-  - coverage run --source=ate -m unittest discover
+  - coverage3 run --source=ate -m unittest discover
 after_success:
-  - coveralls
+  - coveralls3
