--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 sudo: false
-language: python3
+language: python
 python:
   - 2.7
   - 3.3
@@ -7,10 +7,10 @@ python:
   - 3.5
   - 3.6
 install:
-  - pip3 install -r requirements.txt
-  - pip3 install coverage
-  - pip3 install coveralls
+  - pip install -r requirements.txt
+  - pip install coverage
+  - pip install coveralls
 script:
-  - coverage3 run --source=ate -m unittest discover
+  - coverage run --source=ate -m unittest discover
 after_success:
-  - coveralls3
+  - coveralls
